# rawplot

./: .gitignore  README.md  TODO.md  justfile  pyproject.toml
src/rawplot/: bias.py  filters.py  hv.py  image.py  imarith.py  linearity.py  master.py  photodiode.py  plan.py  snr.py  spectess.py  spectral.py  tas.py
src/rawplot/ptc/: __init__.py  chart1.py  common.py  noise_charts.py  noise_curves.py  snr_curves.py  table.py  variance_curves.py
src/rawplot/resources/: Ham-S2281-01.csv  Ham-S2281-04.csv  OSI-11-01-004-10D_cross.csv  OSI-11-01-004-10D_manu.csv  OSI-11-01-004_10D.csv  __init__.py  global.mplstyle  rawplot.mplstyle
src/rawplot/util/: cli.py  common.py  misc.py  mpl.py  rawimage.py  validators.py
src/rawplot/util/analyzer/: image.py
src/rawplot/util/mpl/: plot.py
